fix page overflow problem

--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-body, html { margin: 0px; padding: 0px; height: 100%; }
+html, body { margin: 0px; padding: 0px; height: 100%; overflow: hidden; }
